--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         <div class="container">
         <form name="gameForm">
             <div class="btnDiv text-center mt-3">
-                <button class="btn btn-primary">Addition</button>
-                <button class="btn btn-primary">Subtract</button>
-                <button class="btn btn-primary">Multiplication</button>
-                <button class="btn btn-primary">Division</button>
+                <button class="btn btn-primary" onclick="addition()">Addition</button>
+                <button class="btn btn-primary" onclick="subtract()">Subtract</button>
+                <button class="btn btn-primary" onclick="multiply()">Multiplication</button>
+                <button class="btn btn-primary" onclick="divide()">Division</button>
             </div>
             <div class="radbtn text-center">
-                <input type="radio" name="arithmetic" />Easy <input type="radio" name="arithmetic" checked />Moderate <input type="radio" name="arithmetic" />Difficult
+                <input type="radio" name="arithmetic" checked/>Easy <input type="radio" name="arithmetic" />Moderate <input type="radio" name="arithmetic" />Difficult
             </div>
 
             <br />
 
             <div class="text-center text">
-                <button type="button" value="checkScore" class="btn btn-secondary">Check Score</button>
-            <button type="reset" value="reset" class="btn btn-danger">Reset</button>
+                <button type="button" value="checkScore" class="btn btn-secondary" onclick="check()">Check Score</button>
+            <button type="reset" value="reset" class="btn btn-danger" onclick="javascript:correct =0; wrong =0;">Reset</button>
             </div>
         </form>
 
