adding welcome not but page linking in progress

--- a/front.html
+++ b/front.html
@@ -9,11 +9,9 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="header text-center">Random Math Game</h1>
-            <p id="instruction" class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus officiis esse enim dolore, quae pariatur.</p>
-            <div class="userInput">
-                <input type="text" name="name" id="userName" placeholder="Choose a username" />
-                <a href="index.html"><button class="btn btn-primary signUp">Click Play</button></a>
+            <h2 class="welcome text-center mt-3" id="userNote"><span id="outPut"></span></h2>
+            <div id="hide">
+                <button class="btn btn-primary mt-5 text-center" id="name" onclick="hide()">Enter Username</button>
             </div>
         </div>
     </body>
