worked on the front page and added a new btn

--- a/front.html
+++ b/front.html
@@ -8,10 +8,14 @@
         <title>Enter Username to Play</title>
     </head>
     <body>
-        <div class="container">
+        <div class="container text-center mt-5">
             <h2 class="welcome text-center mt-3" id="userNote"><span id="outPut"></span></h2>
             <div id="hide">
-                <button class="btn btn-primary mt-5 text-center" id="name" onclick="hide()">Enter Username</button>
+                <p class="mt-3 text-center">
+                    Note: The game time starts counting once the Play button is clicked, select any of the options of mathematics arithmetics and your desire levels. <br />
+                    It is advisable to begin the game from the easy level and then move up as get more comfortable
+                </p>
+                <button class="btn btn-primary mt-2 text-center" id="name" onclick="hide()">Enter Username</button>
             </div>
         </div>
     </body>
