--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <!--create an elemnt to display a welcome msg with username inputed -->
-        <div class="gameTime"></div>
+        <div class="gameTime mt-5"></div>
         <div class="container">
         <form name="gameForm">
             <div class="btnDiv text-center mt-3">
