--- a/front.html
+++ b/front.html
@@ -12,10 +12,10 @@
             <h2 class="welcome text-center mt-3" id="userNote"><span id="outPut"></span></h2>
             <div id="hide">
                 <p class="mt-3 text-center">
-                    Note: The game time starts counting once the Play button is clicked, select any of the options of mathematics arithmetics and your desire levels. <br />
-                    It is advisable to begin the game from the easy level and then move up as get more comfortable
+                    Note: The game time starts counting once the Play button is clicked, select any of the options of mathematics arithmetics and your desire levels.
                 </p>
-                <button class="btn btn-primary mt-2 text-center" id="name" onclick="hide()">Enter Username</button>
+                <p>It is advisable to begin the game from the easy level and then move up as get more comfortable</p>
+                <button id="name" class="btn btn-primary mt-2 text-center" onclick="hide()">Enter Username</button>
             </div>
         </div>
     </body>
