--- a/index.html
+++ b/index.html
@@ -9,29 +9,28 @@
     </head>
     <body>
         <!--create an elemnt to display a welcome msg with username inputed -->
-        <div class="gameTime mt-5"></div>
+        <div class="mt-5" id="gameTime"></div>
         <div class="container">
-        <form name="gameForm">
-            <div class="btnDiv text-center mt-3">
-                <button class="btn btn-primary" onclick="addition()">Addition</button>
-                <button class="btn btn-primary" onclick="subtract()">Subtract</button>
-                <button class="btn btn-primary" onclick="multiply()">Multiplication</button>
-                <button class="btn btn-primary" onclick="divide()">Division</button>
-            </div>
-            <div class="radbtn text-center">
-                <input type="radio" name="arithmetic" checked/>Easy <input type="radio" name="arithmetic" />Moderate <input type="radio" name="arithmetic" />Difficult
-            </div>
+            <form name="gameForm">
+                <div class="btnDiv text-center mt-3">
+                    <button class="btn btn-primary" onclick="addition()">Addition</button>
+                    <button class="btn btn-primary" onclick="subtract()">Subtract</button>
+                    <button class="btn btn-primary" onclick="multiply()">Multiplication</button>
+                    <button class="btn btn-primary" onclick="divide()">Division</button>
+                </div>
+                <div class="radbtn text-center">
+                    <input type="radio" name="arithmetic" checked />Easy <input type="radio" name="arithmetic" />Moderate <input type="radio" name="arithmetic" />Difficult
+                </div>
 
-            <br />
+                <br />
 
-            <div class="text-center text">
-                <button type="button" value="checkScore" class="btn btn-secondary checkScore" onclick="scoreUpdate()">Check Score</button>
-            <button type="reset" value="reset" class="btn btn-danger" onclick="javascript:correct =0; wrong =0;">Reset</button>
-            </div>
-            <div class="score"></div>
-        </form>
-
-    
+                <div class="text-center text">
+                    <button type="button" value="checkScore" class="btn btn-secondary checkScore" onclick="scoreUpdate()">Check Score</button>
+                    <button type="reset" value="reset" class="btn btn-danger" onclick="javascript:correct =0; wrong =0;">Reset</button>
+                </div>
+                <div class="score"></div>
+            </form>
+        </div>
     </body>
     <script src="app.js"></script>
 </html>
