fixed the timer

--- a/front.html
+++ b/front.html
@@ -15,7 +15,7 @@
                     Note: The game time starts counting once the Play button is clicked, select any of the options of mathematics arithmetics and your desire levels.
                 </p>
                 <p>It is advisable to begin the game from the easy level and then move up as get more comfortable</p>
-                <button id="name" class="btn btn-primary mt-2 text-center" onclick="hide()">Enter Username</button>
+                <button id="name" class="btn btn-primary mt-2 text-center">Enter Username</button>
             </div>
         </div>
     </body>
