--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     </head>
     <body>
         <!--create an elemnt to display a welcome msg with username inputed -->
-        <div class="mt-5" id="gameTime"></div>
+        <div class="mt-5 gameTime" id="gameTime"></div>
         <div class="container">
             <form name="gameForm">
                 <div class="btnDiv text-center mt-3">
-                    <button class="btn btn-primary" onclick="addition()">Addition</button>
-                    <button class="btn btn-primary" onclick="subtract()">Subtract</button>
-                    <button class="btn btn-primary" onclick="multiply()">Multiplication</button>
-                    <button class="btn btn-primary" onclick="divide()">Division</button>
+                    <button class="btn btn-primary" name="quest" onclick="addition()">Addition</button>
+                    <button class="btn btn-primary" name="quest" onclick="subtract()">Subtract</button>
+                    <button class="btn btn-primary" name="quest" onclick="multiply()">Multiplication</button>
+                    <button class="btn btn-primary" name="quest" onclick="divide()">Division</button>
                 </div>
                 <div class="radbtn text-center">
                     <input type="radio" name="arithmetic" checked />Easy <input type="radio" name="arithmetic" />Moderate <input type="radio" name="arithmetic" />Difficult
@@ -31,6 +31,6 @@
                 <div class="score"></div>
             </form>
         </div>
+        <script src="app.js"></script>
     </body>
-    <script src="app.js"></script>
 </html>
