working the arimethic

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="container">
             <form name="gameForm">
                 <div class="btnDiv text-center mt-3">
-                    <button class="btn btn-primary" name="quest" onclick="addition()">Addition</button>
-                    <button class="btn btn-primary" name="quest" onclick="subtract()">Subtract</button>
-                    <button class="btn btn-primary" name="quest" onclick="multiply()">Multiplication</button>
-                    <button class="btn btn-primary" name="quest" onclick="divide()">Division</button>
+                    <button class="btn btn-primary" id="plus" onclick="addition()">Addition</button>
+                    <button class="btn btn-primary artMetic" onclick="subtract()">Subtract</button>
+                    <button class="btn btn-primary artMetic" onclick="multiply()">Multiplication</button>
+                    <button class="btn btn-primary artMetic" onclick="divide()">Division</button>
                 </div>
                 <div class="radbtn text-center">
                     <input type="radio" name="arithmetic" checked />Easy <input type="radio" name="arithmetic" />Moderate <input type="radio" name="arithmetic" />Difficult
